Switching between shaders

--- a/shaders/CMakeLists.txt
+++ b/shaders/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.31)
 
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/basic.vert
+file(GLOB VERTEX_SHADER_FILES_PATH
+  ${CMAKE_CURRENT_SOURCE_DIR}/*.vert)
+
+file(COPY ${VERTEX_SHADER_FILES_PATH} 
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/basic.frag 
+file(GLOB FRAGMENT_SHADER_FILES_PATH
+     ${CMAKE_CURRENT_SOURCE_DIR}/*.frag)
+
+file(COPY ${FRAGMENT_SHADER_FILES_PATH} 
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-     
