--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,7 @@ project(starter-project LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-
-include_directories(src src/glfw/include)
+add_subdirectory(src)
 
 file(GLOB SOURCE_FILES_PATH src/opengl/*.cpp src/tools/*.cpp src/*.cpp src/imgui/*.cpp)
 
@@ -14,7 +13,7 @@ add_executable(starter-project ${SOURCE_FILES_PATH})
 
 set_target_properties(starter-project PROPERTIES LINKER_LANGUAGE CXX)
 
-target_include_directories(starter-project PUBLIC src/glm)
+target_include_directories(starter-project PUBLIC src PUBLIC src/glm PUBLIC src/glfw/include)
 
 target_compile_features(starter-project PUBLIC cxx_std_20)
 
@@ -23,6 +22,5 @@ find_package(OpenGL REQUIRED)
 target_link_libraries(starter-project OpenGL::GL)
 target_link_libraries(starter-project src/glfw/src/Debug/glfw3)
 
-add_subdirectory(src/glfw)
 add_subdirectory(shaders)
 add_subdirectory(textures)
